script completed for bmi calculator

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <label for="weight">Enter Your Weight (in kilograms):</label><br>
             <input type="number" id="weight" required min="10" max="500"><br><br>
 
-            <button type="button" onclick="calculateBMI()">Calculate</button>
+            <button type="submit" >Calculate</button>
         </form>
         <div id="result">
         </div>
